--- a/templates/shoppingList.html
+++ b/templates/shoppingList.html
@@ -1,3 +1,6 @@
+{% extends "base.html" %}
+
+{% block content %}
 <form>
 <h2>add a food !!!</h2>
 <input type="text" name = "name" >
@@ -19,3 +22,4 @@
   </ul>
 {% endif %}
 </form>
+{% endblock %}
